resources/style.css
html {
	position: relative;
	min-height: 100%;
}
body {
	margin: 0; padding: 0px 0;
	background-color: #dddddd;
	background-size: cover;
	min-width: 650px;
  width:100%;
	min-height: 100%;
}
h1 {
	margin: 1 0;
	font-size: 38px;
	display: inline-block;
}
#content {
	margin:  0 20px 10px 20px;
	min-height: 100%;
	padding-bottom:60px;

}
.header {
 	padding: 0;
	-moz-background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	-webkit-background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	height: 90px;
	border-bottom: 3px solid #005200;
	position: absolute 0px 0px;
	font-family: "Book Antiqua";
	text-align: center;
	color: #ddd;
}
.footer {
	-moz-background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	-webkit-background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	background-image: linear-gradient(to bottom,#1A1A1A,#282828);
	border-top: 3px solid #005200;
	width:100%;
	height:90px;
	position:absolute;
	bottom:0;
	left:0;
	text-align: center;
	font-family: sans-serif;
	font-size: 12px;
	color: #ddd;
}
.container{
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	padding: 4px 32px 32px 32px;
	background-color: #fff;
	margin: 0px 60px 20px;
	height: auto;
}
.container h1 {
	font-family: OpenSansB;
	color: #333;
}
.container h2 {
	font-family: OpenSansB;
	color: #333;
	text-align: center;
}
.container p {
		text-align: center;
}
.container p, li{
	color: #555;
	font-family: sans-serif;
}
.img {
	width: 600px;
	margin: 0 auto;
	display: block;
}
.logo {
	height: 85px;
	margin: 2.5px;
 	vertical-align: top;
}
.navigation{
	text-align: center;
	min-width: 200px;
}

a.btn:hover {
	color: #333;
	text-decoration: underline;
   }
@font-face {
    font-family: OpenSansB;
    src: url(OpenSans-CondBold.ttf);
}
@font-face {
    font-family: OpenSansL;
    src: url(OpenSans-CondLight.ttf);
}
a.btn {
	padding: 8px 20px 8px 20px;
	font-size: 17.5px;
	margin: 3px 3px 3px 0px;
	display: inline-block;
	vertical-align: middle;
	cursor: pointer;
	text-decoration: none;
	text-align: center;
	text-shadow: 0 -1px 0 rgba(0,0,0,0.05);
	color: #555;
	font-family: OpenSansB;
   	-moz-box-sizing:    border-box;
   	-webkit-box-sizing: border-box;
    	box-sizing:        border-box;
  	letter-spacing: -0.02em;
}
.center {
	margin: 0 auto;
	display: block;
}
.boxshaddow {
	-moz-box-shadow: 0 0 8px rgba(0,0,0,0.4);
	-webkit-box-shadow: 0 0 8px rgba(0,0,0,0.4);
	box-shadow: 0 0 8px rgba(0,0,0,0.4);
}
#contactus {
	width: 600px;
	padding: 20px 50px 20px 50px;
	margin: 20px auto;
	min-height: 500px;
	height: auto !important;
	height: 500px;
}

#contactus input, #contactus textarea {
	padding: 5px;
	width: 471px;
	font-family: Helvetica, sans-serif;
	font-size: 1.4em;
	margin: 0px 0px 10px 0px;
	border: 2px solid #ccc;
}

#contactus textarea {
	height: 90px;
}

#contactus textarea:focus, #contactus input:focus {
	border: 2px solid #900;
}

#contactus input.submit-button {
	width: 100px;
	float: right;
}

#SocialMedia {
		float:center;
    width: 100px;
		margin-left:auto;
  margin-right:auto;
}
#FacebookIcon {
    float: left;
    width: 50px;
}
#TripAdvisorIcon {
    margin: 0 0 0 50px; /* considering the border you need to use a margin so the content does not float under the first div*/
}
label {
	float: left;
	text-align: right;
	margin-right: 15px;
	width: 100px;
	padding-top: 5px;
	font-size: 1.4em;
}

